# django-task-manager

./: .env.example  .gitignore  README.md  makefile  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: admin.py  forms.py  settings.py  urls.py  views.py
task_manager/labels/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options_alter_label_created_at.py  0003_alter_label_name.py
task_manager/statuses/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_created_at.py
task_manager/tasks/: apps.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_author.py  0003_task_label.py  0004_tasklabels_alter_task_label_tasklabels_task.py  0005_rename_label_task_labels.py  0006_alter_task_labels_delete_tasklabels.py  0007_alter_task_options_alter_task_created_at_and_more.py  0008_alter_task_description_alter_task_executor_and_more.py  0009_alter_task_labels.py  0010_rename_labels_task_label.py  (+1 more)
task_manager/templates/: base.html  delete.html  index.html  login.html  users.html
task_manager/templatetags/: custom_filter.py
task_manager/tests/: test_labels.py  test_registration.py  test_statuses.py  test_task_manager.py  test_users.py  test_view.py
task_manager/users/: apps.py  forms.py  mixins.py  models.py  urls.py  views.py
templates/: base.html  delete.html  form.html
templates/components/: filter.html  navbar.html
templates/labels/: labels_list.html
templates/tasks/: task_detail.html  tasks_list.html
templates/users/: users_list.html
(+11 files in other folders)
