[tool.poetry]
name = "hexlet-code"
version = "0.9.0"
description = "Web app for organizing tasks between people."
authors = ["emp7yhead <artyomkropp@gmail.com>"]
packages = [
    { include = "task_manager" },
    ]

[tool.poetry.dependencies]
python = "^3.9.1"
Django = "^4.0.4"
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"
django-bootstrap4 = "^22.1"
django-filter = "^22.1"
rollbar = "^0.16.3"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"
coverage = "^6.3.2"
Faker = "^13.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
